Fix: Make credit footer visible by fixing Adobe CEP panel height override

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
 .panel-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
